fixed unit tests format
Signed-off-by: shazaaldawamneh <shaza.aldawamneh@hotmail.com>